@@ -335,6 +335,10 @@
      ["Unset Printing All" coq-unset-printing-all t]
      ["Set Printing Implicit" coq-set-printing-implicit t]
      ["Unset Printing Implicit" coq-unset-printing-implicit t]
+     ["Set Printing Parentheses" coq-set-printing-parentheses t]
+     ["Unset Printing Parentheses" coq-unset-printing-parentheses t]
+     ["Set Printing Notations" coq-set-printing-notations t]
+     ["Unset Printing Notations" coq-unset-printing-notations t]
      ["Set Printing Coercions" coq-set-printing-coercions t]
      ["Unset Printing Coercions" coq-unset-printing-coercions t]
      ["Set Printing Compact Contexts" coq-set-printing-implicit t]
